changed the privacy and terms pages

--- a/terms.html
+++ b/terms.html
@@ -9,31 +9,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
-<bod>
+<body>
 
-    <!--<header>
+    <header>
         <div class="logo-container">
             <a href="index.html"><img src="images/logo.jpg" alt="PawnSecure SA Logo" class="logo"></a>
         </div>
 
-        <nav>
+        <!--<nav>
             <a href="index.html">Home</a>
             <a href="index.html#about">About</a>
             <a href="index.html#services">Services</a>
             <a href="index.html#contact">Contact</a>
-        </nav>
-
-    </header>-->
-
-        <header>
-        <div class="logo-container">
-            <a href="index.html"><img src="images/logo.jpg" alt="pawnsecure sa logo" class="logo"></a>
-        </div>
-        <nav>
-            <a href="index.html">ABOUT</a>
-            <a href="index.html">SERVICES</a>
-            <a href="index.html">CONTACT</a>
-        </nav>
+        </nav>-->
+       
     </header>
 
     <main class="legal-page">
@@ -123,5 +112,5 @@
     </footer>
 
     <script src="script.js"></script>
-</bod>
+</body>
 </html>
